final changes done